# scripts

./: .gitignore  .gitmodules  LICENSE  README  input.ini  installer.bat  installer.perl  overlay.conf  perl-assoc.perl  perl-install.bat  perl-mods.perl  windy-installer.bat  点一下自动装好.bat  点这个开始接收消息.bat
Config/: .Xresource  .calendar+cal-holidays  .calendar+calendar  .config+fcitx+rime+default.custom.yaml  .conkyrc  .emacs  .fvwm+autostart.bash  .fvwm+env.fvwm  .fvwm+func.fvwm  .fvwm+menu.fvwm  .fvwm+style.fvwm  .fvwm+window.fvwm  .fvwm+废弃的.fvwm  .getmail+getmailrc.in  .gitconfig  .ls-colors  .mailcap  .muttrc  .xinitrc  .zsh+alias  .zsh+env  .zsh+misc  .zsh+old  .zsh+prompt  .zshrc  Xresource  axelrc  calendar+cal-holidays  conkyrc  emacs  fvwm+autostart.bash  fvwm+bind.fvwm  fvwm+c.window  fvwm+config  fvwm+misc.fvwm  gitconfig  ln-config-home.perl  ln-配置文件到home.bash  ls-colors  msmtprc.in  (+16 more)
Config/.config+Scripts/: cal.perl  scriptpath  taskmanager
Config/.emacs.d+config/: #settings.el#  .#settings.el  settings.el
Config/.emacs.d+lisp-others/: fvwm-mode.el
Config/.zsh+completions/: _gfw  _weather.perl
Config/config+Scripts/: ColorMake.mtailrc  Default  cal.perl  countup.cache  countup.perl  gssh  notice-msg  rr-RSS.perl  scriptFunctions  scriptFunctions.windows  scriptpath  taskmanager  tray-volume.perl  traymenu.perl  wallpaper  weather
Config/emacs.d+config/: 0-base-functions.el  1-emacs-theme.el  custom.el  emacs-theme.el  keybindings.el  org-mode.el  plugins.el  settings.el  spacemacs-config.el
Config/emacs.d+lisp-others/: delight-powerline.el  erc-highlight-nicknames.el  erc-nick-notify.el  linum.el  rainbow-delimiters.el  redo.el
Config/emacs.d+load/: colorize.el  git-commit-mode.el  highlight-tab.el  rainbow-func.el  text-alias-mode.el
Config/emacs.d+themes/: darkmate.el
Config/zsh+completions/: _e  _g  _rr-RSS.perl
Data/: forum-filter.glade  抹了个茶.htm
GentooConfig/: cron-tab  hosts  kernel-config-2.6.39-gentoo-r3.txt  kernel-config-3.0.6.txt  kernel-config-3.1.6.txt  kernel-config-3.10.17.txt  kernel-config-3.12.13.txt  kernel-config-3.12.20.txt  kernel-config-3.12.21-gentoo-r1.txt  kernel-config-3.14.5-gentoo-r1.txt  kernel-config-3.15.1.txt  kernel-config-3.15.3.txt  kernel-config-3.17.1.txt  kernel-config-3.2.1-gentoo-r2.txt  kernel-config-3.2.12.txt  kernel-config-3.3.8.txt  kernel-config-3.4.9.txt  kernel-config-3.5.7.txt  kernel-config-3.6.11.txt  kernel-config-3.7.10-gentoo-r1.txt  kernel-config-3.7.10.txt  kernel-config-4.0.1.txt  make.conf  rc.conf  world  xorg.conf-laptop2tv  xorg.conf-single
GentooConfig/conf.d/: cpufrequtils  hostname  hwclock  keymaps  lm_sensors  modules  net  net.bak  network  pydoc-2.7  pydoc-3.2  pydoc-3.3  pydoc-3.4  udev-settle
GentooConfig/local.d/: brightness.start  brightness.stop
Hold-script-dir/: ea-记账.perl  forum-filter.perl  forum-快速回复.perl  paste-img.perl  rr-RSS.perl  run-prog.perl  sm-Hash  sm-LibDaemon  sm-LibDistro  sm-Svn  taskbar.perl  twitter-client.perl  unicom.bash
default-cfg/: gitpath  paste-img.perl  rr-RSS.perl  scriptpath  todo.perl  weather
lib/: Base.pm  Configure.pm  ForumFilter.pm  TextAlias.pm  TimeDay.pm  ToDo.pm  WindowsSupport.pm  Windy.pm  scriptFunctions.pm  sm-Configure  sm-ConfigureFile  sm-Download  sm-GoogleCode  sm-LibObject  sm-Notice  sm-OptionParser  sm-Reference
src/Taskmanager/: CMakeLists.txt  app.cpp  app.h  hoverbutton.cpp  hoverbutton.h  kde-window.cpp  kde-window.h  main.cpp  window-lib.h  window.cpp  window.h
src/windy/: CMakeLists.txt  README.md  build.perl  call-api.hpp  call-api.hpp.part  conf.hpp  convert.hpp  debug.hpp  genFuncList.perl  main.c  test.perl  windy.cpp
src/windy/cmake/: FindIconv.cmake
src/windy/group-add/: build.perl  group-add.cpp
src/windy/interp/: build.perl  dll-main.cpp  init.perl  main.c  opts.txt  perl.c  test.perl  windy-dbg.txt
src/windy/perl/: windy-perl.c  windy-perl.h
src/windy/port/: defs.hpp.part  load.hpp.part  loadlib.hpp
src/windy/t/: test.cpp
src/windy/windy-perl/: MPQ.c  MPQ.def  MPQ.pm  MPQ.xs  MYMETA.json  MYMETA.yml  Makefile.PL  Makefile.old  dll.c  full.c  import-dll.c  import-dll.c.orig  test.perl  xs-generator.perl  xs.xs
(+140 files in other folders)
